edit color principal

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 :root {
     --bg-dark: #000000; /* Negro puro estilo Instagram */
     --bg-card: #121212; /* Gris muy oscuro para tarjetas */
-    --accent-cyan: #45f3ff; /* El color de tu logo */
+    --accent-cyan: #29d9e6; /* El color de tu logo */
     --text-main: #ffffff;
     --text-gray: #b3b3b3;
 }
